Se crea parte del crud de la entidad User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/queuems
+spring.datasource.username=admin
+spring.datasource.password=Queuems2024
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
